implement repo pattern

--- a/ws_with_repository_pattern/appsettings.json
+++ b/ws_with_repository_pattern/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "DefaultConnection": "Server=your_server;Database=your_database;User Id=your_user;Password=your_password;"
     
   },
   "HostingURL": "http://0.0.0.0:10004"
