update folder structure

--- a/ws_with_repository_pattern/appsettings.json
+++ b/ws_with_repository_pattern/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=your_server;Database=your_database;User Id=your_user;Password=your_password;"
-    
+    "DefaultConnection": "Server=your_server;Database=your_database;User Id=your_user;Password=your_password;",
+    "KazutoDB": "Data Source=localhost,1433;Initial Catalog=Commerce;Persist Security Info=True;User ID=sa;Password=@cilaptt;Connection Timeout=60;TrustServerCertificate=True"
   },
   "HostingURL": "http://0.0.0.0:10004"
 }
