--- a/ws_with_repository_pattern/ws_with_repository_pattern.csproj
+++ b/ws_with_repository_pattern/ws_with_repository_pattern.csproj
@@ -7,11 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Binus.WS.Pattern" Version="3.1.7" />
-        <PackageReference Include="Binus.WS.Pattern.Entities" Version="1.6.4" />
+        <PackageReference Include="AutoMapper" Version="13.0.1" />
         <PackageReference Include="FluentValidation" Version="11.10.0" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.33" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.33" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
 
