--- a/ws_with_repository_pattern/ws_with_repository_pattern.csproj
+++ b/ws_with_repository_pattern/ws_with_repository_pattern.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="13.0.1" />
+        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="FluentValidation" Version="11.10.0" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.33" />
