--- a/ws_with_repository_pattern/ws_with_repository_pattern.csproj
+++ b/ws_with_repository_pattern/ws_with_repository_pattern.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="FluentValidation" Version="11.10.0" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.33" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.33" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.33" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
