store key in appsettings.json

--- a/ws_with_repository_pattern/appsettings.json
+++ b/ws_with_repository_pattern/appsettings.json
@@ -10,5 +10,8 @@
     "DefaultConnection": "Server=your_server;Database=your_database;User Id=your_user;Password=your_password;",
     "KazutoDB": "Data Source=localhost,1433;Initial Catalog=Commerce;Persist Security Info=True;User ID=sa;Password=@cilaptt;Connection Timeout=60;TrustServerCertificate=True"
   },
+  "SecretKey": "1eWZ#^7A$Uzp3MCzG0l9&2@Rj^qJ!nLt",
+  "ValidUser": "test-dev",
+  "ValidAudience": "test-dev",
   "HostingURL": "http://0.0.0.0:10004"
 }
