adjustmetn on appsettings.json, AuthenticationService.cs,  ProductController.cs

--- a/ws_with_repository_pattern/appsettings.json
+++ b/ws_with_repository_pattern/appsettings.json
@@ -21,7 +21,7 @@
     }
   },
   "SecretKey": "1eWZ#^7A$Uzp3MCzG0l9&2@Rj^qJ!nLt",
-  "ValidUser": "test-dev",
-  "ValidAudience": "test-dev",
+  "ValidUser": "http://0.0.0.0:10004",
+  "ValidAudience": "http://0.0.0.0:10004",
   "HostingURL": "http://0.0.0.0:10004"
 }
